Bug 1882960: fix(webgpu): queue `OffscreenCanvas`es for presentation when written to r=#webgpu-reviewers!

Partially reverts D203960.