dom/webgpu/CanvasContext.h
@@ -84,8 +84,6 @@ class CanvasContext final : public nsICanvasRenderingContextInternal,
   already_AddRefed<layers::FwdTransactionTracker> UseCompositableForwarder(
       layers::CompositableForwarder* aForwarder) override;
 
-  bool IsOffscreenCanvas() { return !!mOffscreenCanvas; }
-
  public:
   void GetCanvas(dom::OwningHTMLCanvasElementOrOffscreenCanvas&) const;
 
